<resources>
    <string name="app_name">文件快传</string>

    <!-- Main Activity -->
    <string name="status_running">● 运行中</string>
    <string name="status_stopped">○ 已停止</string>
    <string name="ip_placeholder">未连接</string>
    <string name="copy_link">复制链接</string>
    <string name="start_server">启动服务器</string>
    <string name="stop_server">停止服务器</string>
    <string name="save_location">保存位置</string>
    <string name="location_downloads">下载目录</string>
    <string name="location_custom">自定义文件夹</string>
    <string name="change">更改</string>
    <string name="recent_uploads">最近上传</string>
    <string name="no_uploads_yet">暂无上传文件</string>

    <!-- Receiving progress -->
    <string name="receiving">正在接收</string>
    <string name="receiving_status_saving">保存中…</string>
    <string name="receiving_status_complete">接收完成</string>
    <string name="receiving_status_error">接收失败</string>

    <!-- Delete & history -->
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="delete_confirm_title">删除记录</string>
    <string name="delete_confirm_msg">确定要删除 \"%s\" 的上传记录吗？</string>

    <!-- Time formatting -->
    <string name="time_just_now">刚刚</string>
    <string name="time_min_ago">%d 分钟前</string>
    <string name="time_hour_ago">%d 小时前</string>
    <string name="time_day_ago">%d 天前</string>

    <!-- Send files & Clipboard -->
    <string name="send_files_title">发送文件</string>
    <string name="no_shared_files">点击 + 添加要分享的文件</string>
    <string name="clipboard_title">剪贴板</string>
    <string name="clipboard_hint">输入文字，推送到网页端…</string>
    <string name="clipboard_push">推送到网页</string>
    <string name="clipboard_pushed">已推送</string>
    <string name="clipboard_received">已复制到剪贴板: %s…</string>
    <string name="copied">已复制</string>

    <!-- Notification -->
    <string name="notification_title">文件传输运行中</string>
    <string name="notification_stop">停止</string>
    <string name="notification_channel_name">文件传输服务</string>
    <string name="notification_channel_desc">文件传输服务器运行时显示</string>
</resources>
